# stock-agents

./: .aider.chat.history.md  .aider.input.history  .env.example  .gitignore  CLAUDE.md  Data.json  FixingPrompt.md  NeedToDo.md  Prompts.json  README.md  SearchWithModels.md  alembic.ini  docker-compose.yml  howToMigrate.md  indicators.json  package-lock.json  pyproject.toml
.aider.tags.cache.v4/: cache.db  cache.db-shm  cache.db-wal
agents-io/: CEO-input.yaml  CEO-output.yaml  ceo-output-new.yaml  fandamental-output.yaml  macro-output.yaml  sectors-prediction-input-example.yaml  technical-analysis-output-format.yaml  technical-input-example.yaml
ai_service/: Dockerfile  agent.py  aggregator.py  ceo_manager.py  config.py  main.py  orchestrator.py  pipeline.py  pipeline_registry.py  stock_aggregator.py
ai_service/db/: models.py  session.py
ai_service/enricher/: calculator.py  enricher.py  fetcher.py  premarket.py
ai_service/models/: llm_client.py  search_client.py
ai_service/schemas/: input.py  macro_input.py  output.py  run.py  search.py  sector_input.py  stock_output.py
ai_service/utils/: logger.py  output_writer.py  prompt_loader.py  run_logger.py  search_tool.py
backend/: Dockerfile  config.py  macro_schema.json  main.py  sector_schema.json  stock_schema.json  ticker_schema.json
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
mocks/: Macro.json  Sectors.json
prompts/: Macro News Analysis.docx  News Search Agent.docx  Sectors Prediction .docx  Technical Analysis Agent [LONG].docx
scripts/: migrate.py
(+93 files in other folders)
